Kubernetes_Based_Canary_Deployment_with_K3s_and_Istio/Istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-route
spec:
  hosts:
  - "*"
  gateways:
  - demo-gateway
  http:
  - route:
    - destination:
        host: demo-service
        subset: v1
      weight: 50
    - destination:
        host: demo-service
        subset: v2
      weight: 50
